cambio de bloque

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body ng-controller="TodoCtrl" ng-init="init()">
 	<!-- The Common Navigation Navbar-->
-	<!--<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -71,7 +71,7 @@
           </ul>
         </div> 
       </div>
-    </div>-->
+    </div>
 
 	<div class="container" ng-controller="TodoCtrl" id="playground">
 		<div class="row">
