--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	** http://www.apache.org/licenses/LICENSE-2.0
 	** Built by Jay Kanakiya ( @techiejayk )
 	-->
-	<title>Angular js Sortable ToDo-List</title>
+	<title>Angular js Sortable Todo-List</title>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
